# gnu_vrtater

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac
doc/: Makefile.am  version.texi  vrtater.texi
src/: Makefile  Makefile.am  attribs.c  attribs.h  bittoggles.c  bittoggles.h  dialogX11.c  dialogX11.h  generator.c  generator.h  global.h  hmap.c  hmap.h  ifnodeglx.c  ifnodeglx.h  loginkeys.c  loginkeys.h  partial.c  partial.h  progscope.h  rendergl.c  rendergl.h  rotation.c  rotation.h  session.c  session.h  stock.c  stock.h  transform.c  transform.h  tug.c  tug.h  vectors.c  vectors.h  vrtater.c
