# Makefile for vrtater src/.
# Copyright (C) 2013 J. A. Green <green8@sdf-eu.org>
# license: GNU GPL v3, see COPYING, otherwise see vrtater.c

bin_PROGRAMS = vrtater
vrtater_SOURCES = vrtater.c ifnodeglx.c vectors.c rotation.c generator.c session.c dialogX11.c attribs.c tug.c transform.c stock.c rendergl.c hmap.c bittoggles.c partial.c loginkeys.c
